
v1.1
----
- changed license to MIT
- timestamp format can be customized