@@ -3,3 +3,7 @@
 #
 # Default: %m/%d/%y %X (mm/dd/yyyy hh:mm:ss AM/PM)
 chatlog.format (Timestamp format) string %m/%d/%y %X
+
+# Chatlog is output to single file (chatlog.txt) instead
+# of split into files by date (chatlog/YYYY_MM_DD.txt).
+chatlog.single_file (Single file chatlog) bool false
